2004-10-29  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/io43u32x.h: Correct license with permission from Keith Gudger.
	* include/avr/io43u35x.h: Ditto.
	* include/avr/io86r401.h: Correct license with permission from Colin 
	O'Flynn.
	* include/avr/iocan128.h: Ditto.

2004-10-29  Eric B. Weddington  <ericw@evcohs.com>

	* include/avr/iom165.h: Correct license on my files.
	* include/avr/iom325.h: Ditto.
	* include/avr/iom3250.h: Ditto.
	* include/avr/iom645.h: Ditto.
	* include/avr/iom6450.h: Ditto.

2004-10-29  Eric B. Weddington  <ericw@evcohs.com>

	* LICENSE: Show correct license statements, with full list of authors.
	* AUTHORS: Update list of authors.
	* GPL: New file. Contains the GNU Public License referenced in the
	fplib license.

2004-10-29  Eric B. Weddington  <ericw@evcohs.com>

	* include/inttypes.h: Correct license with permission from Joerg Wunsch.
	* include/stdio.h: Ditto.
	* libc/stdio/vfscanf.c: Ditto.
	* libc/stdlib/calloc.c: Ditto.
	* libc/stdlib/malloc.c: Ditto.
	* libc/stdlib/realloc.c: Ditto.

2004-10-28  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* include/avr/iotn2313.h: Remove duplicate defines for PORTxn (they
	are defined in portpins.h). [Bug #10812]
	* include/avr/iocan128.h: Rename PORTxn defines to Pxn (let portpins.h
	define PORTxn).

2004-10-21  Eric B. Weddington <ericw@evcohs.com>

	* include/avr/iom64.h: Fix bit identifer ADFR to ADATE.
	[Bug #10733]

2004-10-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: Add section about gas
	pseudo-ops and AVR-specific operators
	* doc/api/faq.dox: add xref to that section here.

2004-10-15  Eric B. Weddington <ericw@evcohs.com>

	* include/avr/iom165.h: New file. [Patch #3375]
	* include/avr/iom325.h: New file. [Patch #3381]
	* include/avr/iom3250.h: New file. [Patch #3379]
	* include/avr/iom645.h: New file. [Patch #3380]
	* include/avr/iom6450.h: New file. [Patch #3377]
	Add IO header files for new devices.
