@@ -138,7 +138,7 @@ AC_CANONICAL_SYSTEM
 dnl NOTE: Don't put a '-' in the version number or rpm will puke 
 dnl when building the package.
 dnl
-AM_INIT_AUTOMAKE(avr-libc, 1.1.0.20041028)
+AM_INIT_AUTOMAKE(avr-libc, 1.1.0.20041030)
 dnl AM_CONFIG_HEADER(version.h:version-h.in)
 
 AC_DEFINE(__AVRLIBC__,1)
